<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TranslatePro</string>
    <string name="close">close</string>
    <string name="open">open</string>
    <string name="swap_languages">Swap Languages Icon</string>
    <string name="enter_text_to_translate">Enter text…</string>
    <string name="translate">Translate</string>
    <string name="copy">Copy Icon</string>
    <string name="speaker">Speaker Icon</string>
    <string name="copied_to_clipboard">Text copied to clipboard…</string>
    <string name="history">History</string>
    <string name="error_service_unavailable">Awkward, something went wrong. Please try again later.</string>
    <string name="error_client">Awkward, something went wrong. Please contact the support.</string>
    <string name="error_server">Awkward, something went wrong. Please try again later.</string>
    <string name="error_unknown">Oops, an unknown error occurred.</string>
    <string name="record_audio">Record Audio Icon</string>
    <string name="error_speech_recognition_unavailable">Speech recognition is unavailable on your device.</string>
    <string name="stop_recording">Stop Recording Icon</string>
    <string name="apply">Apply Icon</string>
    <string name="record_again">Record Audio Again Icon / Refresh</string>
    <string name="listening">Listening…</string>
    <string name="start_talking">Click record to start talking…</string>
    <string name="delete">Delete Icon</string>
    <string name="clear_history">Clear History Icon</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="clear_history_title">Clear Translation History</string>
    <string name="clear_history_description">Are you sure you want to clear entire translation history?</string>
    <string name="emulator_error">This feature is not supported on emulator environments.</string>
    <string name="idle_translate_text_field">IdleTranslateTextField</string>

</resources>