...
import com.ps.translatepro.translate.domain.translate.TranslateError
import com.ps.translatepro.translate.presentation.TranslateEvent
import com.ps.translatepro.translate.presentation.TranslateState
import kotlinx.coroutines.launch
import java.util.*

const val FROM_LANGUAGE_DROP_DOWN_TAG = "FromLanguageDropDown"
const val TO_LANGUAGE_DROP_DOWN_TAG = "ToLanguageDropDown"


@OptIn(ExperimentalComposeUiApi::class)
@Composable
fun TranslateScreen(
    state: TranslateState,
...
