...
import androidx.compose.ui.text.TextStyle
import androidx.compose.ui.unit.dp
import com.ps.translatepro.android.R
import com.ps.translatepro.android.core.theme.LightBlue
import com.ps.translatepro.core.presentation.UiLanguage

const val IDLE_TRANSLATE_TEXT_FIELD_TAG = "IdleTranslateTextField"
const val TRANSLATED_TEXT_FIELD_TAG = "TranslatedTextField"
@OptIn(ExperimentalAnimationApi::class)
@Composable
fun TranslateTextField(
    fromText: String,
    toText: String?,
...
